# fasterface-tasks

./: Cargo.toml  lefthook.yml
freewrite/: freewrite_2024_08_29.md  freewrite_2024_09_06.md  freewrite_2024_09_09.md  freewrite_2024_09_13.md  specs.md
src/: cli.rs  command.rs  examples.rs  functions.rs  lib.rs  main.rs  traits.rs  types.rs  ui.rs
src/cli/: command.rs
src/cli/command/: print.rs
src/command/: print.rs
src/examples/: ide_plugin.rs  undo_last_commit_in_git.rs
src/examples/ide_plugin/: app.rs  entry.rs  event.rs  fasterface.rs  focused_items.rs  ide.rs  layout.rs  operating_system.rs  panel.rs  panel_kind.rs  person.rs  rust_rover.rs  rust_rover_action.rs  rust_rover_item.rs  rust_rover_panel.rs  state.rs  support_text.rs  user.rs
src/examples/undo_last_commit_in_git/: commit_data.rs  object_id.rs  repo.rs  state.rs
src/functions/: find_entries.rs
src/traits/: to_menu_items.rs  try_to_menu_items.rs  widget.rs
src/types/: alpha_version.rs  alpha_version_v1.rs  app_v1.rs  cli_autocomplete.rs  design.rs  design_v1.rs  design_v2.rs  fasterface_url.rs  fuzzy_matcher_data.rs  fuzzy_matcher_name.rs  krate.rs  krate_info.rs  krate_name.rs  language.rs  locator.rs  menu_item.rs  mockup.rs  module.rs  related_project_data.rs  related_project_name.rs  rust_project_directory.rs  story_name.rs  strategy.rs  technologies.rs  technology.rs  temporary_file.rs  ui.rs  view_category_v1.rs  view_item_v1.rs
src/ui/: container.rs  input.rs  orientation.rs  panel.rs  text.rs
