[package]
name = "fasterface-tasks"
version = "0.1.0"
edition = "2021"
description = "Tasks for fasterface"
license = "Apache-2.0 OR MIT"
homepage = "https://github.com/DenisGorbachev/fasterface-tasks"
repository = "https://github.com/DenisGorbachev/fasterface-tasks"

[package.metadata.details]
title = "Fasterface tasks"
tagline = ""
summary = ""
announcement = ""

[dependencies]
clap = { version = "4.5.11", features = ["derive"] }
crossterm = { version = "0.28.1" }
#fmt-derive = "0.1.2"
#derive_builder = "0.20.0"
derive-getters = { version = "0.5.0", features = ["auto_copy_getters"] }
derive-new = "0.7.0"
derive_more = { version = "1.0.0", features = ["full"] }
#not-found-error = { version = "0.2.1" }
helpful = { git = "https://github.com/DenisGorbachev/helpful" }
indexmap = { version = "2.4.0" }
itertools = { version = "0.13.0" }
not-found-error = { version = "0.2.3" }
#subtype = { path = "../subtype" }
serde = { version = "1.0.204", features = ["derive"], optional = true }
strum = { version = "0.26.3", features = ["derive"] }
#save-load = { path = "../save-load", features = ["serde_json", "clap"] }
#itertools = { version = "0.13.0" }
stub-macro = { version = "0.1.3" }
subtype = { git = "https://github.com/DenisGorbachev/subtype" }
syn = { version = "2.0.76", features = ["full", "extra-traits"] }
tokio = { version = "1.39.2", features = ["macros", "fs", "net", "rt", "rt-multi-thread"] }
url = { version = "2.5.2", features = ["serde"] }
url-macro = { version = "0.1.6" }

[package.metadata.cargo-machete]
ignored = ["stub_macro", "serde"]
